# stock-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  requirements-data-accessibility.txt
backend/: .env.example  .railwayignore  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml
backend/api/: dependencies.py  main.py
backend/api/repositories/: __init__.py  asset_repo.py  backtest_repo.py  chat_repo.py  factor_repo.py  price_repo.py  profile_repo.py  session_repo.py  signal_repo.py  user_repo.py
backend/api/routers/: analysis.py  assets.py  auth.py  backtests.py  chat.py  correlation.py  dashboard.py  factors.py  fx.py  health.py  prices.py  profile.py  signals.py  simulation.py
backend/api/schemas/: __init__.py  analysis.py  asset.py  auth.py  backtest.py  chat.py  common.py  correlation.py  dashboard.py  factor.py  price.py  profile.py  signal.py  simulation.py
backend/api/services/: auth_service.py  backtest_service.py  correlation_service.py  dashboard_service.py  fx_service.py  simulation_service.py
backend/collector/: alerting.py  fdr_client.py  fx_collector.py  ingest.py  seed_silver_assets.py  validators.py
backend/config/: logging.py  settings.py
backend/db/: models.py  session.py
backend/db/alembic/: env.py
backend/research_engine/: backtest.py  backtest_store.py  factor_store.py  factors.py  metrics.py  preprocessing.py  signal_store.py
backend/research_engine/simulation/: __init__.py  fx.py  mdd.py  padding.py  portfolio.py  replay.py  strategy_a.py  strategy_b.py  wbi.py
backend/research_engine/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  trend.py
backend/scripts/: backfill_silver_phase1.py  collect.py  daily_collect.bat  e2e_pipeline_viz.py  e2e_verify.py  healthcheck.py  plot_backfill_rowcount.py  plot_p1_visuals.py  preflight.py  register_scheduler.bat  run_research.py  seed_assets.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_integration.py  test_ingest_db.py  test_research_pipeline.py
backend/tests/unit/: test_agentic_classifier.py  test_agentic_data_fetcher.py  test_agentic_reporter.py  test_agentic_schemas.py  test_alerting.py  test_annual_performance.py  test_backtest.py  test_backtest_store.py  test_correlation_analysis.py  test_factor_store.py  test_factors.py  test_fdr_client.py  (+28 more)
(+363 files in other folders)
