[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
description = "7-asset stock dashboard: collection, analysis, visualization"
dependencies = [
    "finance-datareader",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "fastapi>=0.100",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "alembic",
    "pandas>=2.0",
    "numpy",
    "python-dotenv",
    "python-jose[cryptography]",
    "bcrypt>=4.0",
    "python-multipart",
    "email-validator",
    "langgraph",
    "langchain-core",
    "langchain-openai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["collector*", "research_engine*", "api*", "db*", "config*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["E501", "E702", "E401", "E402", "F401", "I001"]
"tests/**" = ["E501"]
"db/alembic/versions/**" = ["E402", "E501"]
"api/services/simulation_service.py" = ["E501"]
"research_engine/simulation/strategy_a.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
